// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator on client should handle errors and not render dilation from a first fetch if a second fetch throws 1`] = `
<div>
  <MatrixInput
    onSubmit={[Function]}
  />
  <ErrorMessage />
</div>
`;

exports[`Calculator on client should render the dilation after is has been fetched 1`] = `
<div>
  <MatrixInput
    onSubmit={[Function]}
  />
  <div>
    [1,2,3,4]
  </div>
</div>
`;

exports[`Calculator should render 1`] = `
<div>
  <MatrixInput
    onSubmit={[Function]}
  />
</div>
`;
